<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        style="@style/txtLayout"
        android:id="@+id/txtResult"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#000000"
                android:onClick="btnClear"
                android:text="@string/AC"
                android:textColor="#2196F3"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_backspace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#000000"
                android:onClick="btnBackSpace"
                android:text="@string/Backspace"
                android:textColor="#2196F3"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btnOperations"
                android:id="@+id/btn_divide"
                android:onClick="btnOperations"
                android:text="@string/Divide"
                android:textSize="25sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btnNumbers"
                android:id="@+id/btn_7"
                android:onClick="btnClick"
                android:text="@string/Seven"  />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btnNumbers"
                android:id="@+id/btn_8"
                android:onClick="btnClick"
                android:text="@string/Eight" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btnNumbers"
                android:id="@+id/btn_9"
                android:onClick="btnClick"
                android:text="@string/Nine" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btnOperations"
                android:id="@+id/btn_multiply"
                android:onClick="btnOperations"
                android:textSize="18sp"
                android:text="@string/Multiply" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btnNumbers"
                android:id="@+id/btn_4"
                android:onClick="btnClick"
                android:text="@string/Four" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btnNumbers"
                android:id="@+id/btn_5"
                android:onClick="btnClick"
                android:text="@string/Five" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btnNumbers"
                android:id="@+id/btn_6"
                android:onClick="btnClick"
                android:text="@string/Six" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btnOperations"
                android:id="@+id/btn_minus"
                android:onClick="btnOperations"
                android:text="@string/Minus"
                android:textSize="36sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btnNumbers"
                android:id="@+id/btn_1"
                android:onClick="btnClick"
                android:text="@string/One" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btnNumbers"
                android:id="@+id/btn_2"
                android:onClick="btnClick"
                android:text="@string/Two" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btnNumbers"
                android:id="@+id/btn_3"
                android:onClick="btnClick"
                android:text="@string/Three" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btnOperations"
                android:id="@+id/btn_add"
                android:onClick="btnOperations"
                android:text="@string/Plus"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4"
            android:background="@color/black">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/btnNumbers"
                android:id="@+id/btn_0"
                android:onClick="btnClick"
                android:text="@string/Zero" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#000000"
                android:onClick="btnClick"
                android:text="@string/Dot"
                android:textSize="30sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_equals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/roundbutton"
                android:onClick="btnEquals"
                android:text="@string/Equals"
                android:textColor="#000000"
                android:textSize="30sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>